Modified v1.1 create user to add mosso and nast tenants to domain